preventa extra space above page-title

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -44,6 +44,10 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.2;
 }
 
+/* prevent extra margin from page title */
+h1 :is(:first-child) {
+    margin-top: 0rem;
+}
 
 h2 {
     color: var(--text-alt-color)
